Mon Feb  1 15:12:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Reverted previous commit (r2948); this change affected retained
          PDU behavior in the TransportSendBuffer used by the multicast
          transport.

Mon Feb  1 06:34:39 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Made header_block_ created once instead of for every packet.
          This should fix memory leak due to header_block_ not released
          and reduce the heap allocation which should improve performance.

Sat Jan 30 23:44:13 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/lj-plots.gp:
        * performance-tests/Bench/bin/plot-transports.gp:

          Changed Latency and Jitter units to microseconds.

Fri Jan 29 21:57:37 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Corrected refcounts.

Fri Jan 29 20:55:00 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Moved pkt_chain_ release from destructor to stop() before
          MB allocators is deleted. This should fix a SEGV caused by
          this incorrect deletion order.

Fri Jan 29 16:51:05 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.h:
        * dds/DCPS/transport/multicast/MulticastSession.inl:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableSession.h: