@@ -1,3 +1,10 @@
+Mon Feb  1 15:34:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
+        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
+
+          Minor nits corrected; documentation updates.
+
 Mon Feb  1 15:12:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
